--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -189,6 +189,8 @@ subdirs (
         libmscore/utils
         mscore/workspaces
         mscore/palette
+        libmscore/albumsIO
+        libmscore/albums
         importmidi
         capella
         biab
