--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -274,7 +274,7 @@ else (APPLE)
       set(CMAKE_C_FLAGS_DEBUG            "/MT /W4 /Zi /Ob0 /Od /RTC1")
       set(CMAKE_C_FLAGS_RELEASE          "/MT /W4 /O2 /Ob2 /DNDEBUG")
       set(CMAKE_C_FLAGS_RELWITHDEBINFO   "/MT /W4 /Zi /O2 /Ob1 /DNDEBUG")
-      set(CMAKE_EXE_LINKER_FLAGS         "/DYNAMICBASE:NO /NODEFAULTLIB:LIBCMT")
+      set(CMAKE_EXE_LINKER_FLAGS         "/NODEFAULTLIB:LIBCMT")
    else (MSVC)
       if (MINGW)
          set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a -D_UNICODE -DUNICODE")
