--- a/.github/workflows/check_visual_tests.yml
+++ b/.github/workflows/check_visual_tests.yml
@@ -6,7 +6,7 @@ on:
   #push: # push.inputs field does not exist, use gen1 below
   #  branches:
   #  - 3.x
-  pull_request:
+  #pull_request:
   # workflow_dispatch: # triggered by github web ui run "Check: Visual Tests (vtest)" workflow button.
   workflow_call: # triggered by "uses" from other yml files.
 
